fix white box appearing bottom of scrollbar
Former-commit-id: 2e6ab202f645213bac02e2a660f5dc31f364b32e

--- a/web_ui/src/App.scss
+++ b/web_ui/src/App.scss
@@ -32,6 +32,10 @@
 	border-radius: 10px;
 }
 
+::-webkit-scrollbar-corner {
+	background: none;
+}
+
 body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
